Overview of changes in Cairo 1.101
==================================

* Properly specify our dependencies.
* Fix some erroneous POD links.
* Distribute a missing test file.

Overview of changes in Cairo 1.100
==================================

Since 1.08x (the previous stable series)
----------------------------------------
* Make "use Cairo x.yyy" work.  This required renaming the old
  Cairo::VERSION, a wrapper for CAIRO_VERSION, to Cairo::LIB_VERSION --
  but we kept the old way of calling it working.  Cairo::version,
  Cairo::version_string and Cairo::VERSION_ENCODE got the same treatment
  for consistency.
* Auto-upgrade strings to utf8.  Note that this means that calling
  utf8::encode() on strings before passing them into Cairo will now
  yield doubly-encoded and thus broken strings.  Also, having
  utf8-encoded literals in your code without an accompanying "use utf8"
  line will also lead to double encoding.
* Expand and improve the README and META.yml files.
* Many compilation and test suite fixes.

Since 1.091
-----------
* Do not assume that sizeof(void*) == sizeof(long)
* Calculate a string length more efficiently
* added updated README text for RT#74870
* Created %meta_merge which follows v2 of meta-spec

Overview of changes in Cairo 1.091
==================================

* Auto-upgrade strings to utf8.  Note that this means that calling
  utf8::encode() on strings before passing them into Cairo will now
  yield doubly-encoded and thus broken strings.  Also, having
  utf8-encoded literals in your code without an accompanying "use utf8"
  line will also lead to double encoding.
* Fix compiling and testing against older versions of cairo.
* Make the test suite more robust.

Overview of changes in Cairo 1.090
==================================

* Make "use Cairo x.yyy" work; fixes RT#72783.  This required renaming the old
  Cairo::VERSION, a wrapper for CAIRO_VERSION, to Cairo::LIB_VERSION -- but we